--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "koishi-plugin-chatluna-actions",
-    "description": "Translation services powered by the large language model in chatluna",
-    "version": "0.0.6",
+    "description": "customize actions for chatluna",
+    "version": "0.0.1",
     "type": "module",
     "main": "lib/index.cjs",
     "module": "lib/index.mjs",
