--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
   },
   "homepage": "https://github.com/ChatLunaLab/chatluna-actions#readme",
   "dependencies": {
-    "@langchain/core": "^0.3.43"
+    "@langchain/core": "0.3.62"
   },
   "resolutions": {
-    "@langchain/core": "0.3.43",
+    "@langchain/core": "0.3.62",
     "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
   },
   "overrides": {
-    "@langchain/core": "0.3.43",
+    "@langchain/core": "0.3.62",
     "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
   },
   "pnpm": {
     "overrides": {
-      "@langchain/core": "0.3.43",
+      "@langchain/core": "0.3.62",
       "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
     }
   },
