--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "koishi-plugin-chatluna-actions",
   "description": "customize actions for chatluna",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "type": "module",
   "main": "lib/index.cjs",
   "module": "lib/index.mjs",
   "typings": "lib/index.d.ts",
   "exports": {
     ".": {
+      "types": "./lib/index.d.ts",
       "import": "./lib/index.mjs",
-      "require": "./lib/index.cjs",
-      "types": "./lib/index.d.ts"
+      "require": "./lib/index.cjs"
     },
     "./package.json": "./package.json"
   },
@@ -45,16 +45,16 @@
   },
   "resolutions": {
     "@langchain/core": "0.3.62",
-    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
+    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
   },
   "overrides": {
     "@langchain/core": "0.3.62",
-    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
+    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
   },
   "pnpm": {
     "overrides": {
       "@langchain/core": "0.3.62",
-      "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.19"
+      "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
     }
   },
   "devDependencies": {
