--- a/package.json
+++ b/package.json
@@ -1,104 +1,105 @@
 {
-  "name": "koishi-plugin-chatluna-actions",
-  "description": "customize actions for chatluna",
-  "version": "0.0.18",
-  "type": "module",
-  "main": "lib/index.cjs",
-  "module": "lib/index.mjs",
-  "typings": "lib/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./lib/index.d.ts",
-      "import": "./lib/index.mjs",
-      "require": "./lib/index.cjs"
+    "name": "koishi-plugin-chatluna-actions",
+    "description": "customize actions for chatluna",
+    "version": "0.0.19",
+    "type": "module",
+    "main": "lib/index.cjs",
+    "module": "lib/index.mjs",
+    "typings": "lib/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./lib/index.d.ts",
+            "import": "./lib/index.mjs",
+            "require": "./lib/index.cjs"
+        },
+        "./package.json": "./package.json"
     },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "lib",
-    "dist",
-    "resources"
-  ],
-  "license": "AGPL-3.0",
-  "keywords": [
-    "chatbot",
-    "koishi",
-    "plugin",
-    "service",
-    "chatgpt",
-    "chatluna",
-    "preset",
-    "actions"
-  ],
-  "author": "dingyi222666 <dingyi222666@foxmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ChatLunaLab/chatluna-actions.git",
-    "directory": "."
-  },
-  "bugs": {
-    "url": "https://github.com/ChatLunaLab/chatluna-actions/issues"
-  },
-  "homepage": "https://github.com/ChatLunaLab/chatluna-actions#readme",
-  "dependencies": {
-    "@langchain/core": "0.3.62"
-  },
-  "resolutions": {
-    "@langchain/core": "0.3.62",
-    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
-  },
-  "overrides": {
-    "@langchain/core": "0.3.62",
-    "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
-  },
-  "pnpm": {
+    "files": [
+        "lib",
+        "dist",
+        "resources"
+    ],
+    "license": "AGPL-3.0",
+    "keywords": [
+        "chatbot",
+        "koishi",
+        "plugin",
+        "service",
+        "chatgpt",
+        "chatluna",
+        "preset",
+        "actions"
+    ],
+    "author": "dingyi222666 <dingyi222666@foxmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ChatLunaLab/chatluna-actions.git",
+        "directory": "."
+    },
+    "bugs": {
+        "url": "https://github.com/ChatLunaLab/chatluna-actions/issues"
+    },
+    "homepage": "https://github.com/ChatLunaLab/chatluna-actions#readme",
+    "dependencies": {
+        "@langchain/core": "0.3.62",
+        "zod": "3.25.76"
+    },
+    "resolutions": {
+        "@langchain/core": "0.3.62",
+        "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
+    },
     "overrides": {
-      "@langchain/core": "0.3.62",
-      "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
-    }
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.18.1-alpha.3",
-    "@typescript-eslint/parser": "^8.45.1-alpha.0",
-    "atsc": "^1.2.2",
-    "esbuild": "^0.25.10",
-    "esbuild-register": "^3.6.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-promise": "^7.2.1",
-    "koishi": "^4.18.9",
-    "yakumo": "^1.0.0",
-    "yakumo-esbuild": "^1.0.0",
-    "yakumo-mocha": "^1.0.0",
-    "yakumo-tsc": "^1.0.0"
-  },
-  "peerDependencies": {
-    "koishi": "^4.18.9",
-    "koishi-plugin-chatluna": "^1.3.0-alpha.49"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "scripts": {
-    "build": "yarn yakumo build",
-    "bump": "yarn yakumo version",
-    "dep": "yarn yakumo upgrade",
-    "pub": "yarn yakumo publish",
-    "lint": "yarn eslint src --ext=ts",
-    "lint-fix": "yarn eslint src --ext=ts --fix"
-  },
-  "koishi": {
-    "description": {
-      "zh": "ChatLuna 快捷指令"
+        "@langchain/core": "0.3.62",
+        "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
     },
-    "service": {
-      "required": [
-        "chatluna"
-      ]
+    "pnpm": {
+        "overrides": {
+            "@langchain/core": "0.3.62",
+            "js-tiktoken": "npm:@dingyi222666/js-tiktoken@^1.0.21"
+        }
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^7.18.1-alpha.3",
+        "@typescript-eslint/parser": "^8.45.1-alpha.0",
+        "atsc": "^1.2.2",
+        "esbuild": "^0.25.10",
+        "esbuild-register": "^3.6.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.2",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-promise": "^7.2.1",
+        "koishi": "^4.18.9",
+        "yakumo": "^1.0.0",
+        "yakumo-esbuild": "^1.0.0",
+        "yakumo-mocha": "^1.0.0",
+        "yakumo-tsc": "^1.0.0"
+    },
+    "peerDependencies": {
+        "koishi": "^4.18.9",
+        "koishi-plugin-chatluna": "^1.3.0-alpha.49"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "scripts": {
+        "build": "yarn yakumo build",
+        "bump": "yarn yakumo version",
+        "dep": "yarn yakumo upgrade",
+        "pub": "yarn yakumo publish",
+        "lint": "yarn eslint src --ext=ts",
+        "lint-fix": "yarn eslint src --ext=ts --fix"
+    },
+    "koishi": {
+        "description": {
+            "zh": "ChatLuna 快捷指令"
+        },
+        "service": {
+            "required": [
+                "chatluna"
+            ]
+        }
     }
-  }
 }
