--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "files": [
         "lib",
         "dist",
-        "resources"
+        "resources",
+        "client"
     ],
     "license": "AGPL-3.0",
     "keywords": [
@@ -75,10 +76,12 @@
         "yakumo": "^1.0.0",
         "yakumo-esbuild": "^1.0.0",
         "yakumo-mocha": "^1.0.0",
+        "@koishijs/client": "^5.30.9",
         "yakumo-tsc": "^1.0.0"
     },
     "peerDependencies": {
         "koishi": "^4.18.9",
+        "@koishijs/plugin-console": "^5.30.9",
         "koishi-plugin-chatluna": "^1.3.0-alpha.49"
     },
     "engines": {
